automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -4,9 +4,12 @@
   Pirate Name: <input type="text" name="pirate[name]">
   Pirate Weight: <input type="text" name="pirate[weight]">
   Pirate Height: <input type="text" name="pirate[height]">
-  Course Name: <input type="text" name="[courses][][name]">
-  Course Topic: <input type="text" name="student[courses][][topic]">
-  Course Name: <input type="text" name="student[courses][][name]">
-  Course Topic: <input type="text" name="student[courses][][topic]">
+  Ship Name: <input type="text" name="pirate[ships][][name]">
+  Ship Type: <input type="text" name="pirate[ships][][type]">
+  Ship Booty: <input type="text" name="pirate[ships][][booty]">
+  Ship Name: <input type="text" name="pirate[ships][][name]">
+  Ship Type: <input type="text" name="pirate[ships][][type]">
+  Ship Booty: <input type="text" name="pirate[ships][][booty]">
+
   <input type="submit">
 </form>
