--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,4 +1,4 @@
-<h1>Make your form here</h1>
+<h1>Pirate</h1>
 
 <form action="/pirates" method="post">
   Pirate Name: <input type="text" name="pirate[name]">
