--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -4,7 +4,7 @@
   Pirate Name: <input type="text" name="pirate[name]">
   Pirate Weight: <input type="text" name="pirate[weight]">
   Pirate Height: <input type="text" name="pirate[height]">
-  ship_name_1: <input type="text" name="pirate[ships][][name]">
+  Ship Name 1: <input type="text" name="pirate[ships][][name]">
   Ship Type: <input type="text" name="pirate[ships][][type]">
   Ship Booty: <input type="text" name="pirate[ships][][booty]">
   Ship Name: <input type="text" name="pirate[ships][][name]">
