automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -11,5 +11,5 @@
   Ship Type: <input input id="ship_type_2" type="text" name="pirate[ships][][type]">
   Ship Booty: <input input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
 
-  <input type="submit">
+  <input input id="Submit" type="submit">
 </form>
